[package]
name = "imgui-log"
version = "0.1.0"
description = "log backend that mirrors to an imgui window and/or stdout"
repository = "https://github.com/Smasher816/imgui-log"
authors = ["Smasher816 <Smasher816@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["amethyst", "imgui", "logging", "log", "logger"]
categories = ["API bindings", "GUI"]
readme = "README.md"
edition = "2018"

[features]
amethyst-system = [ "amethyst", "amethyst-imgui" ]

[[example]]
name = "demo_log"
required-features = [ "amethyst-system" ]

[dependencies]
imgui = "0.2"
log = { version = "0.4.8", features = ["std"] }
amethyst = { version = "0.13.2", optional = true }
amethyst-imgui = { version = "0.5.1", optional = true }
